[metadata]
name = pystache
version = attr: pystache.__version__
author = Chris Wanstrath
author_email = chris@ozmm.org
maintainer = Thomas David Baker
maintainer_email = bakert@gmail.com
description = Mustache for Python
url = https://github.com/PennyDreadfulMTG/pystache
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
zip_safe = True
include_package_data = True
packages = find:

[options.package_data]
* = *.mustache, *.txt

[options.entry_points]
console_scripts =
    pystache=pystache.commands.render:main
    pystache-test=pystache.commands.test:main

[options.extras_require]
test =
    pytest
    pytest-cov

cov =
    coverage
    coverage_python_version

[check]
metadata = true
restructuredtext = true
strict = false

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    coverage*
    conda/**
